2005-05-13  Joel Reed  <joelwreed@comcast.com>

	* tests/t_unidiff3.at: opps. forgot to add this file which
	should have been included as fix for bug 13072.

2005-05-13  Joel Reed  <joelwreed@comcast.com>

	* diff_patch.cc, transforms.cc, testsuite.at: Patch from 
	drepper@redhat.com, who writes: "The attached patch should fix bug
	13072.  I have no idea why the code in transform.cc insists on
	adding an empty line in case the file is empty. Removing the code
	didn't cause any regressions in the test suite and the
	diff_patch.cc change corrects the output format.  A new test case
	is included as well."

2005-05-13  Joel Reed  <joelwreed@comcast.com>

	* automate.cc: add automate attributes command
	* commands.cc: add attributes subcommand helptext
	* contrib/monotone.zsh_completion: use automate attributes
	for completion of monotone attr and cleanup ignore files code
	* tests/t_automate_attributes.at: add testcase
	* testsuite.at: include new testcaes

2005-05-13  Jon Bright  <jon@siliconcircus.com>
	* testsuite.at (UNGZ): Change the way the ungzipping works on
	Win32, in the hope that test 206 will no longer be given invalid
	files.

2005-05-12  Derek Scherger  <derek@echologic.com>

	* automate.cc: bump version number to 1.0
	(struct inventory_item): add pre/post states
	(inventory_paths): remove obsolete function
	(inventory_pre_state, inventory_post_state, inventory_file_state,
	inventory_renames): add fancy new functions
	(automate_inventory): rework for new output format
	* manifest.{cc,hh} (classify_paths): rename to ...
	(classify_manifest_paths): ... this and work solely from manifest
	* monotone.texi: (Automation): update inventory docs
	* tests/t_automate_inventory.at: update for new format and add
	some more tests
	
2005-05-13  Matthew Gregan  <kinetik@orcon.net.nz>

	* HACKING: New file.  First pass at a brief document to help
	newcomers hack on monotone.

2005-05-12  Riccardo Ghetta <birrachiara@tin.it>

	* options.hh (OPT_MSGFILE): New option.