@@ -4898,6 +4898,83 @@ message to stderr, and exits with status 1.
 
 @end table
 
+@item monotone automate stdio
+
+@table @strong
+@item Arguments:
+
+none
+
+@item Added in:
+
+1.0
+
+@item Purpose:
+
+Allow multiple automate commands to be run from one instance of monotone.
+
+@item Sample input:
+
+@verbatim
+leaves
+parents 1f4ef73c3e056883c6a5ff66728dd764557db5e6
+inventory
+@end verbatim
+
+@item Input format:
+
+The input is a series of lines of the form "command [args...]", where
+"command" is a valid "monotone automate" subcommand.
+
+@item Sample output:
+
+@verbatim
+###BEGIN leaves###
+bdff75b3d1a58d5370d1b9aaeed1b5a4d0cba564
+ed0306ed417d258d82716bee36841199d8bb7626
+ee0f35591c79c9390baff5e0638b545963d1babf
+###END leaves###
+###BEGIN parents###
+094a5075b4bd7fe379f810edeb5f03283b50e13a
+###END parents###
+###BEGIN inventory###
+   "work.cc"
+   "work.hh"
+   "xdelta.cc"
+   "xdelta.hh"
+###END inventory###
+@end verbatim
+
+@item Output format:
+
+The output consists of the output of each command given, preceeded by
+the line "###BEGIN <command>###" and followed by the line
+"###END <command>###", where <command> is the name of the command.
+If an error is encountered while running the command received, the
+"###END <command>###" line is replaced with one of the
+"###ERR name <details>###"lines shown below.
+
+@item Error conditions:
+
+If an invalid command line is recieved, prints "###ERR <command> usage###"
+to standard output, where <command> is the name of the command that was
+given. If some other error condition occurrs during execution of a command
+received on input, prints "###ERR <command> msg <message>###", where
+<command> is the name of the command, and <message> is the error message
+provided by that command, which would have been output on standard error
+if the command was invoked directly. Output with errors looks like:
+
+@verbatim
+###BEGIN inventor###
+###ERR inventor usage###
+###BEGIN inventory###
+###ERR inventory msg misuse: working copy directory required but not found###
+@end verbatim
+
+Errors do not affect the return value.
+
+@end table
+
 @end ftable
 
 @page
